Fixed too large icons

--- a/wp-content/themes/konscript/stylesheet/source/main.scss
+++ b/wp-content/themes/konscript/stylesheet/source/main.scss
@@ -808,6 +808,8 @@ body.home .widget{
 	// image
 	ul.ui-tabs-nav li.ui-tabs-nav-item a img{	 
 		margin: 5px 20px;
+		width: 40px;
+		vertical-align:middle;
 	}
 
 	// text
